--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "facebook-oauth",
-  "version": "0.1.0",
-  "description": "Facebook OAuth integration for modern browsers",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "version": "0.0.1-beta.6",
+  "description": "Facebook OAuth PKCE integration for modern browsers",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -16,10 +16,12 @@
     }
   },
   "scripts": {
-    "build": "tsup && cp README.md LICENSE package.json dist/",
+    "build": "rm -rf dist && tsup && cp README.md LICENSE package.json dist/",
+    "pre:deploy": "npm run build",
+    "publish-npm": "npm run pre:deploy && cd dist && npm publish",
+    "publish-npm:beta": "npm run pre:deploy && cd dist && npm publish --tag beta",
     "dev": "tsup --watch",
-    "typecheck": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [
     "facebook",
